--- a/agents/otto8.yaml
+++ b/agents/otto8.yaml
@@ -75,7 +75,7 @@ prompt: |
 
 starterMessages:
 - Can you explain how Tasks and Tools work?
-- What should I use your for?
+- What should I use you for?
 - Can you explain this user interface?
 knowledgeDescription: |
   Documents from the following sites:
